arrumado a telemetria de spans